finished portfolio pages

--- a/portfolio/crystalcollector.html
+++ b/portfolio/crystalcollector.html
@@ -54,7 +54,7 @@
         <div class="col-12" id="block">
             <div class="row">
                 <div class="col-4">
-                    <div id="crystal-header">Crystal Collector</div>
+                    <div id="sm-header">Crystal Collector</div>
                     <hr>
                 </div>
             </div>
