--- a/portfolio/party.html
+++ b/portfolio/party.html
@@ -85,12 +85,12 @@
                     <span id="space">---</span>
                 </div>
                 <div class="col-4">
-                    <a href="https://jixuni.github.io/project_1-groupies-/">
+                    <a href="https://jixuni.github.io/party_like_its_1999/">
                         <button type="button" id="button-style" class="btn">
                             <i class="fa fa-desktop" aria-hidden="true"></i>
                             Live Demo</button></a>
 
-                    <a href="https://github.com/jixuni/project_1-groupies-">
+                    <a href="https://github.com/jixuni/party_like_its_1999">
                         <button type="button" id="button-style" class="btn">
                             <i class="fa fa-code" aria-hidden="true"></i>
                             See Code</button></a>
