--- a/about.html
+++ b/about.html
@@ -54,69 +54,61 @@
     <!-- Start of container -->
 
     <div class="container border-light">
-        <div class="col-12" id="block">
+        <div class="col-xs-12" id="block">
             <div class="row">
-                <div class="col-4">
+                <div class="col-xs-4">
                     <h1 class="content-header">About Me</h1>
                     <hr>
                 </div>
             </div>
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <a href="portfolio/friendfinder.html"> <img src="assets/images/ers.jpg" alt="Photo of me"></a>
-                    </div>
-                    <div class="col-md">
-                        <p>
-                            Puppy kitty ipsum dolor sit good dog foot stick canary.
-                            Teeth Mittens grooming vaccine walk swimming nest good boy
-                            furry tongue heel furry treats fish. Cage run fast kitten
-                            dinnertime balll run foot park fleas throw house train licks
-                            stick dinnertime window. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies.</p>
-                        <p>
-                            Puppy kitty ipsum dolor sit good dog foot stick canary.
-                            Teeth Mittens grooming vaccine walk swimming nest good boy
-                            furry tongue heel furry treats fish. Cage run fast kitten
-                            dinnertime balll run foot park fleas throw house train licks
-                            stick dinnertime window. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies. Yawn litter fish yawn toy pet gate
-                            throw Buddy kitty wag tail ball groom crate ferret heel wet nose
-                            Rover toys pet supplies.
-                        </p>
-                    </div>
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+                    <a href="portfolio/friendfinder.html"><img class="img-fluid block-example border border-light" src="assets/images/ers.jpg"
+                            id="pme" alt="Photo of me" width="300" height="400"></a>
                 </div>
+                <div class="col-xs-6 col-md-8">
+                    <p>
+                        Puppy kitty ipsum dolor sit good dog foot stick canary.
+                        Teeth Mittens grooming vaccine walk swimming nest good boy
+                        furry tongue heel furry treats fish. Cage run fast kitten
+                        dinnertime balll run foot park fleas throw house train licks
+                        stick dinnertime window. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies.</p>
+                    <p>
+                        Puppy kitty ipsum dolor sit good dog foot stick canary.
+                        Teeth Mittens grooming vaccine walk swimming nest good boy
+                        furry tongue heel furry treats fish. Cage run fast kitten
+                        dinnertime balll run foot park fleas throw house train licks
+                        stick dinnertime window. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies. Yawn litter fish yawn toy pet gate
+                        throw Buddy kitty wag tail ball groom crate ferret heel wet nose
+                        Rover toys pet supplies.
+                    </p>
+                </div>
+            </div>
 
-
-                <div class="row">
-                    <div class="col-4">
+            <div class="row">
+                    <div class="col-xs-4 col-md-4">
                         <span id="space">---</span>
                     </div>
-                    <div class="col-4">
+                    <div class="col-xs-4 col-md-4">
                         <a href="assets/images/resume.pdf">
                             <button type="button" id="button-style" class="btn">
                                 <i class="fa fa-download" aria-hidden="true"></i>
                                 Download My Resume</button></a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-xs-4 col-md-4">
                         <span id="space">---</span>
                     </div>
                 </div>
-
-
-
-
-            </div>
         </div>
-
     </div>
-    </div>
-    </div>
+   
 
     <!-- End of container -->
 
