--- a/hellopage.html
+++ b/hellopage.html
@@ -66,19 +66,22 @@
             <!-- Portfolio Grid Section -->
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-xs-6 col-md-4">
                         <a href="portfolio/friendfinder.html">
                             <img class="img-fluid block-example border border-light" src="assets/images/friendfinder.png"
                                 alt="friendfriend mock up">
                         </a></div>
 
-                    <div class="col-lg-4">
+                    <div class="col-xs-6 col-md-4">
                         <a href="portfolio/liri.html">
                             <img class="img-fluid block-example border border-light" src="assets/images/liri.png" alt="liri mock up">
                         </a></div>
+
+                        <div class="col-xs-6 col-md-4">
                     <a href="portfolio/crystalcollector.html">
-                        <div class="col-lg-4"><img class="img-fluid block-example border border-light" src="assets/images/crystals.png"
+                        <img class="img-fluid block-example border border-light" src="assets/images/crystals.png"
                                 alt="crystal mock up">
+                                </div>
                     </a>
                 </div>
             </div>
