--- a/portfolio/crystalcollector.html
+++ b/portfolio/crystalcollector.html
@@ -88,12 +88,12 @@
                     <span id="space">---</span>
                 </div>
                 <div class="col-4">
-                    <a href="https://ersjava.github.io/unit-4-game1/">
+                    <a href="https://ersjava.github.io/crystal_collector/">
                         <button type="button" id="button-style" class="btn">
                             <i class="fa fa-desktop" aria-hidden="true"></i>
                             Live Demo</button></a>
 
-                    <a href="https://github.com/ersJava/unit-4-game1">
+                    <a href="https://github.com/ersJava/crystal_collector">
                         <button type="button" id="button-style" class="btn">
                             <i class="fa fa-code" aria-hidden="true"></i>
                             See Code</button></a>
