--- a/contactme.html
+++ b/contactme.html
@@ -7,15 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Beth Sergeant Portfolio</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Cutive+Mono|Major+Mono+Display" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <title>Contact Me</title>
+    <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Major+Mono+Display|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/css/mdb.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -130,17 +127,10 @@
                         <div class="col-md-12">
                                 <!-- <i class="fa fa-envelope" aria-hidden="true"></i> Add envelope to icon to button-->
                             <input type="submit" id="button-style" class="btn" value="Send message">
-
-
                         </div>
                     </div>
                 </div>
-
             </form>
-
-
-
-
 
         </div>
     </div>
@@ -168,13 +158,6 @@
         </nav>
     </footer>
     <!-- End of footer -->
-
-    <!-- jQuery CDN -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Bootstrap CDN -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    </script>
 </body>
 
 </html>
